--- a/styles/style.css
+++ b/styles/style.css
@@ -272,3 +272,102 @@
   flex: none;
   margin: 10px 0px;
 }
+.my-current-target {
+  position: absolute;
+  left: 150px;
+  right: 150px;
+  top: 3266px;
+  bottom: 20px;
+  padding: 0px;
+  width: 1140px;
+  height: 463px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0px;
+  margin: 111px 0px;
+}
+.card-container {
+  width: 1140px;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0px;
+  margin: 48px 0px;
+}
+.card {
+  width: 364px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 40px;
+  margin: 0px 24px;
+  border-radius: 16px;
+}
+.card-bg-color-1 {
+  background: rgba(255, 76, 30, 0.05);
+}
+.card-bg-color-2 {
+  background: rgba(0, 76, 232, 0.05);
+}
+.card-bg-color-3 {
+  background: rgba(255, 223, 0, 0.05);
+}
+.card-title {
+  width: 284px;
+  height: 36px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px;
+  margin: 8px 0px;
+  color: rgb(13, 19, 33);
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 36px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.p-3 {
+  width: 284px;
+  height: 52px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px;
+  margin: 8px 0px;
+  opacity: 0.7;
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.card-link {
+  width: 284px;
+  height: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px;
+  margin: 24px 0px;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration-line: underline;
+}
+.card-link > a {
+  color: black;
+}
